<resources>
    <string name="app_name">Calculadora De Notas</string>
    <string name="assinatura">@joaowoigt</string>
    <string name="nota_1">Nota 1</string>
    <string name="nota_2">Nota 2</string>
    <string name="faltas">Faltas</string>
    <string name="faltas">Faltas</string>
    <string name="calcular">Calcular!</string>
    <string name="title">Bem vindo a minha calculadora!</string>
    <string name="secondary_text">Insira um valor de nota (utilizando ponto) e faltas </string>
    <string name="supporting_text">Será aprovado se: Nota for maior que 6 e faltas menores que 5
    </string>

</resources>